# lt_matrix

./: .gitignore  BUILD_SUMMARY.md  CLAUDE.md  COMMIT_STAGE_IMPLEMENTATION_REPORT.md  COMMIT_STAGE_TESTS_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  EXECUTE_STAGE_INTEGRATION_COMPLETE.md  LICENSE  LICENSE-3RDPARTY  LINUX_BUILD_VERIFICATION_REPORT.md  MACOS_BUILD_VERIFICATION_REPORT.md  MACOS_UNIVERSAL_BINARY_GUIDE.md  MACOS_UNIVERSAL_BINARY_STATUS.md  MCP_CONFIG_IMPLEMENTATION.md  MCP_PROTOCOL_MESSAGE_TYPES_IMPLEMENTATION.md  MEMORY_IMPLEMENTATION_SUMMARY.md  Makefile  PIPELINE_ORCHESTRATOR_IMPLEMENTATION.md  README.md  SECURITY.md  Taskfile.yml  USAGE_GUIDE.md  WORKSPACE_STATE_IMPLEMENTATION_SUMMARY.md  build-linux.bat  build-linux.sh  build.rs  deny.toml  full_test_output.txt  help_output.txt  ltmatrix.json  man_help.txt  release_help.txt  test_full_out.txt  test_full_output.txt  test_out.txt  test_output.txt  version_output.txt
.cargo/: config.toml  config_local.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/homebrew/: ltmatrix.rb
.github/scoop/: ltmatrix.json
.github/workflows/: ci.yml  macos-verification.yml  release.yml  test.yml
.ltmatrix/sessions/: claude-009b46aa-2b26-443b-980a-e72a385e281d.json  claude-017ac4ac-a328-43c4-aac9-ee349a74e8bf.json  claude-03fa445b-0504-44a2-bdaf-aad4bdd2cbfd.json  claude-055d9588-cae7-4d73-8584-0cd1edf4dd4c.json  claude-0d0bf722-ce5a-402c-a431-c1acac13ebb0.json  claude-0d5fd29b-2914-4186-a429-feb1dea2549e.json  claude-0dec51fb-73b9-4d42-95d3-c9cf5143307d.json  claude-0ea2a566-74a3-4b4f-875e-b870c2fdbe3a.json  claude-0f2b8c25-132d-4b05-98dc-38b9be5236af.json  claude-127dcdd6-9299-4e60-a3d7-17d2445f9546.json  claude-1425526f-d67d-46b7-8d4b-d3a509339331.json  (+71 more)
.task/checksum/: build
Projectlt_matrixtarget/: .rustc_info.json
benches/: benchmark.rs
config/: prompts.toml
crates/ltmatrix-agent/: Cargo.toml
crates/ltmatrix-agent/src/: agent_pool.rs  backend.rs  claude.rs  codex.rs  factory.rs  glm.rs  kimicode.rs  lib.rs  opencode.rs  pool.rs  session.rs  warmup.rs
crates/ltmatrix-config/: Cargo.toml
crates/ltmatrix-config/src/: agent.rs  feature.rs  lib.rs  mcp.rs  modes.rs  prompts.rs  settings.rs
crates/ltmatrix-config/src/telemetry/: collector.rs  config.rs  event.rs  mod.rs  sender.rs
crates/ltmatrix-core/: Cargo.toml
crates/ltmatrix-core/src/: agent_type.rs  execution_mode.rs  lib.rs  task_resources.rs
crates/ltmatrix-mcp/: Cargo.toml
crates/ltmatrix-mcp/src/: client.rs  correlation.rs  heartbeat.rs  lib.rs  notification.rs  reconnect.rs  router.rs
crates/ltmatrix-mcp/src/protocol/: errors.rs  messages.rs  methods.rs  mod.rs  wrappers.rs
crates/ltmatrix-mcp/src/transport/: framing.rs  mod.rs  stdio.rs
docs/: .gitignore  CHANGELOG.md  COMMIT_STAGE_SUMMARY.md  COMMIT_STAGE_TEST_REPORT.md  CONTRIBUTING.md  CORRUPTED_STATE_RECOVERY_COMPLETE.md  CROSS_COMPILATION.md  DRY_RUN_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LINUX_BUILD_REPORT.md  LOGGING_TESTS_SUMMARY.md  MACOS_BUILD_REPORT.md  MACOS_FIXES_SUMMARY.md  MACOS_VERIFICATION_GUIDE.md  MACOS_VERIFICATION_STATUS.md  MCP_CONFIG_TEST_COVERAGE.md  MCP_CONFIG_TEST_SUMMARY.md  MCP_PROTOCOL_MESSAGE_TEST_SUMMARY.md  MEMORY_SYSTEM_TEST_REPORT.md  MEMORY_SYSTEM_TEST_SUMMARY.md  MEMORY_SYSTEM_VERIFICATION.md  README.md  RELEASING.md  TASK_LINUX_BUILD_SUMMARY.md  TASK_MACOS_BUILD_GUIDE_SUMMARY.md  UNIVERSAL_BINARY_TESTS_SUMMARY.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  VALIDATION_UTILITIES_SUMMARY.md  WINDOWS_BUILD_REPORT.md  agentpool_integration_complete.md  agentpool_integration_summary.md  agentpool_integration_test_summary.md  ask_flag_implementation.md  build.md  cli-config-integration.md  commit-stage-implementation.md  config-loading-tests-summary.md  config.md  config_test_coverage.md  dependency_validation_implementation.md  (+52 more)
examples/: basic_usage.rs  cli_config_integration.rs  completions_demo.rs  config_demo.rs  dependency_validation_demo.rs  dry_run_example.rs  feature_flags.rs  generate_man_pages.rs  log_directory_demo.rs  log_management.rs  mermaid_diagram_demo.rs  output_formatters.rs  progress_eta_demo.rs  progress_manager_demo.rs  task_assessment.rs  task_generation_demo.rs  task_scheduling.rs  task_tree_demo.rs  terminal_colors.rs  test_framework_detection.rs  validation_demo.rs  workspace_lifecycle_demo.rs  workspace_state_demo.rs
scripts/: build-all.sh  build.ps1  build_clean.bat  create-universal-binary.sh  generate-changelog.sh  generate_man_pages.bat  generate_man_pages.sh  install-hooks.bat  install-hooks.sh  package-macos.sh  uninstall-hooks.sh  verify-linux-build.sh  verify-macos.sh
src/: lib.rs  main.rs
src/agent/: mod.rs  (+10 more)
tests/: AGENTPOOL_WARMUP_INTEGRATION_TEST_SUMMARY.md  AGENT_BACKEND_ACCEPTANCE_TESTS_SUMMARY.md  AGENT_BACKEND_IMPLEMENTATION_COMPLETE.md  AGENT_BACKEND_TEST_COVERAGE.md  AGENT_BACKEND_TEST_SUMMARY.md  CLAUDE_AGENT_BACKEND_IMPLEMENTATION.md  CONFIG_MERGE_PRECEDENCE_TEST_SUMMARY.md  CONFIG_MERGE_TEST_QUICK_REFERENCE.md  CONFIG_TEST_COVERAGE.md  DEPENDENCY_VALIDATION_ALGORITHMS_QA_REPORT.md  EXECUTE_STAGE_TEST_COVERAGE.md  EXPERT_FLAG_TEST_COVERAGE.md  FEATURE_FLAG_TESTS_VERIFICATION.md  FEATURE_FLAG_TEST_COVERAGE.md  FEATURE_FLAG_TEST_SUMMARY.md  GENERATE_STAGE_TEST_SUMMARY.md  INTERACTIVE_CLARIFICATION_TEST_README.md  INTERACTIVE_CLARIFICATION_TEST_SUMMARY.md  JSON_PARSING_VALIDATION_QA_REPORT.md  MAIN_ENTRY_POINT_QA_REPORT.md  MAIN_ENTRY_POINT_TEST_SUMMARY.md  ORCHESTRATOR_TEST_SUMMARY.md  OUTPUT_FORMATTERS_QA_REPORT.md  PROGRESS_BAR_TEST_SUMMARY.md  QA_SUMMARY.md  QA_TEST_SUMMARY.md  RESUME_CLEANUP_IMPLEMENTATION.md  REVIEW_STAGE_TESTING_SUMMARY.md  REVIEW_TESTING_SUMMARY.md  SCHEDULER_TEST_COVERAGE.md  SESSION_LIFECYCLE_TEST_COVERAGE.md  SESSION_POOL_TEST_COVERAGE.md  STATE_CONSISTENCY_TESTING.md  TASK_RECOVERY_TEST_COVERAGE.md  TASK_TREE_TEST_SUMMARY.md  TEST_STAGE_TEST_SUMMARY.md  TEST_SUMMARY.md  VALIDATION_TEST_SUMMARY.md  WARMUP_TEST_COVERAGE.md  WORKSPACE_STATE_INTEGRATION.md  (+219 more)
(+184 files in other folders)
