[package]
name = "ltmatrix"
version = "0.1.0"
edition = "2021"
authors = ["bigfish <bigfish@example.com>"]
description = "A high-performance, cross-platform long-time agent orchestrator rewritten in Rust from Python"
license = "MIT"
repository = "https://github.com/bigfish/ltmatrix"
readme = "README.md"
keywords = ["agent", "orchestrator", "automation", "claude", "development"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bars
indicatif = "0.17"

# Git operations
# Use vendored libgit2 for static linking on musl targets
git2 = { version = "0.19", features = ["vendored-libgit2", "ssh"] }

# HTTP client
# Use rustls-tls for pure Rust TLS (statically linkable)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Datetime handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal handling
console = "0.15"

# Interactive prompts
dialoguer = "0.11"

# Temporary file handling
tempfile = "3.12"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Command detection
which = "6.0"

[features]
# Default features - balanced for development and production
default = []

# Static linking feature for musl targets
# Enables vendored dependencies for truly static binaries
static = [
    "git2/vendored-libgit2",
    "git2/vendored-openssl",
]

# Minimal build - reduces dependencies
minimal = []

# Full feature set - all optional features
full = ["static"]

[package.metadata.docs.rs]
# Features to enable when building docs on docs.rs
features = ["full"]
# Target to build docs for
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
