[package]
name = "ltmatrix"
version = "0.1.0"
edition = "2021"
authors = ["bigfish <bigfish@example.com>"]
description = "A high-performance, cross-platform long-time agent orchestrator rewritten in Rust from Python"
license = "MIT"
repository = "https://github.com/bigfish/ltmatrix"
readme = "README.md"
keywords = ["agent", "orchestrator", "automation", "claude", "development"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Progress bars
indicatif = "0.17"

# Git operations
# Use vendored libgit2 for static linking on musl targets
# SSH support removed for static builds (requires OpenSSL)
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# HTTP client
# Use rustls-tls for pure Rust TLS (statically linkable)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Datetime handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal handling
console = "0.15"

# Interactive prompts
dialoguer = "0.11"

# Temporary file handling
tempfile = "3.12"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Command detection
which = "6.0"

# Directory resolution
dirs = "5.0"

# Regular expressions
regex = "1.10"

# Glob pattern matching
glob = "0.3"

# Signal handling (Unix only)
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[features]
# Default features - balanced for development and production
default = []

# SSH support for git operations (requires OpenSSL, not suitable for static builds)
ssh = ["git2/ssh"]

# Static linking feature for musl targets
# Note: Cannot use SSH feature with static builds due to OpenSSL
static = [
    "git2/vendored-libgit2",
]

# Minimal build - reduces dependencies
minimal = []

# Full feature set - all optional features
# Note: SSH and static are mutually exclusive due to OpenSSL
full = ["ssh"]

[package.metadata.docs.rs]
# Features to enable when building docs on docs.rs
features = ["full"]
# Target to build docs for
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
