[package]
name = "ltmatrix-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Agent backend implementations for ltmatrix"

[dependencies]
ltmatrix-core = { workspace = true }
ltmatrix-config = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
