[package]
name = "ltmatrix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data models and types for ltmatrix"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
